--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "exceljs": "^4.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "uuid": "^8.3.2",
