--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec babel-node server.js",
-    "seed": "nodemon --exec babel-node app/seeders/seed.js"
+    "seed": "babel-node app/seeders/seed.js"
   },
   "author": "",
   "license": "ISC",
