--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.0",
     "sequelize": "^6.3.5",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
